--- a/src/main/webapp/positionList.html
+++ b/src/main/webapp/positionList.html
@@ -17,7 +17,7 @@
             <table id="table" class="tableStyle"></table>
             <div id="tabelBut">
                 <div>
-                    <a href="#" class="easyui-linkbutton" plain="true" iconCls="icon-add" onclick="obj.addBox()">新增</a>
+                    <a href="#" class="easyui-linkbutton" plain="true" iconCls="icon-add" onclick="addOne()">新增</a>
                 </div>
             </div>
         </div>
@@ -31,25 +31,32 @@
             <div title="基本信息">
                 <table class="TailTable">
                     <tr>
-                        <td class="TailLabel">职务：</td>
+                        <td class="TailLabel">职务编号：</td>
                         <td>
-                            <input type="text" class="easyui-validatebox TailInput" name="deptName">
+                            <input type="text" class="easyui-validatebox TailInput" name="positionID" data-options="required:true">
+                            <span class="formSpan">*</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="TailLabel">职务名称：</td>
+                        <td>
+                            <input type="text" class="easyui-validatebox TailInput" name="positionName" data-options="required:true">
                             <span class="formSpan">*</span>
                         </td>
                     </tr>
                 </table>
-                <div class="forSubmint"> <a href="#" class="easyui-linkbutton"  iconCls="icon-save" >保存</a><a href="#" class="easyui-linkbutton"  iconCls="icon-redo" >重置</a> </div>
+                <div class="forSubmint">
+                    <a href="#" class="easyui-linkbutton"  iconCls="icon-save" >保存</a>
+                    <a href="#" class="easyui-linkbutton"  iconCls="icon-redo" >重置</a>
+                </div>
             </div>
         </div>
-
     </form>
 </div>
 
 <script src="js/jquery-easyui/jquery.min.js"></script>
 <script src="js/jquery-easyui/jquery.easyui.min.js"></script>
 <script src="js/jquery-easyui/locale/easyui-lang-zh_CN.js"></script>
-<script src="js/info_position.js"></script>
-
-
+<script src="js/positionList.js"></script>
 </body>
 </html>
