继续完善页面，修改了细节

--- a/src/main/webapp/adminPopedomList.html
+++ b/src/main/webapp/adminPopedomList.html
@@ -26,7 +26,7 @@
             <table id="table" class="tableStyle"></table>
             <div id="tabelBut">
                 <div>
-                    <a href="#" class="easyui-linkbutton" plain="true" iconCls="icon-edit" onclick="editOne()">分配权限</a>
+                    <a href="#" class="easyui-linkbutton" plain="true" iconCls="icon-edit" onclick="editSelect()">分配权限</a>
                 </div>
             </div>
         </div>
@@ -41,11 +41,11 @@
                 <div class="tableFind" style="text-align: center;width: 100%">
                     <p>
                         <label style="width: 100px">用户编号：</label>
-                        <input type="text" class="easyui-validatebox TailInput" name="adminAccount" readonly>
+                        <input type="text" class="easyui-validatebox TailInput" name="adminAccount"  style="width: 160px"  readonly>
                     </p>
                     <p>
                         <label style="width: 100px">用户名&nbsp;：</label>
-                        <input type="text" class="easyui-validatebox TailInput" name="adminName" readonly>
+                        <input type="text" class="easyui-validatebox TailInput" name="adminName" style="width: 160px"  readonly>
                     </p>
                     <p>
                         <label style="width: 100px">一级部门：</label>
