--- a/src/main/webapp/person.html
+++ b/src/main/webapp/person.html
@@ -95,7 +95,7 @@
                     </tr>
                     <tr>
                         <td class="TailLabel">所属部门：</td>
-                        <td><input type="text"  id="part" class="TailInput"/></td>
+                        <td><input type="text"  id="part" class="TailInput" value="青学在"/></td>
                         <td class="TailLabel">职务：</td>
                         <td colspan="2"><select class="TailSelect"><option>经理</option></select></td>
 
