--- a/src/main/webapp/attendanceStatsAll.html
+++ b/src/main/webapp/attendanceStatsAll.html
@@ -19,20 +19,29 @@
                 <div class="tableFind" style="text-align: center;width: 100%">
 
                     <p>
-                        <input type="radio">汇总按年月天：
-                        <select class="easyui-combobox"style="width:160px;height:30px;"></select>年
-                        <select class="easyui-combobox"style="width:160px;height:30px;"></select>月
-                        <select class="easyui-combobox"style="width:160px;height:30px;"></select>天
+                        <input type="radio" name="searchStatsAll" checked/>
+                        汇总按年月天：
+                        <select class="easyui-combobox"style="width:160px;height:30px;" id="selectY"></select>年
+                        <select class="easyui-combobox"style="width:160px;height:30px;" id="selectM"></select>月
+                        <select class="easyui-combobox"style="width:160px;height:30px;" id="selectD"></select>天
                     </p>
                     <p>
-                        <input type="radio">汇总按时间段：
+                        <input type="radio" name="searchStatsAll" />
+                        汇总按时间段：
                         <input type="text" id="d1" class="easyui-datebox"style="width: 16%;height:26px;"/>
                         到
                         <input type="text" id="d2" class="easyui-datebox"style="width: 16%;height:26px;"/>
                     </p>
                     <p>
+                        <input type="radio" name="searchStatsAll" />
                         出勤状态：
                         <input type="checkbox">出勤
+                        <input type="checkbox">迟到
+                        <input type="checkbox">病假
+                        <input type="checkbox">事假
+                        <input type="checkbox">丧家
+                        <input type="checkbox">婚嫁
+                        <input type="checkbox">旷工
                     </p>
                     <p>
                         <input type="radio">部门：
@@ -61,7 +70,7 @@
 <script src="js/jquery-easyui/jquery.min.js"></script>
 <script src="js/jquery-easyui/jquery.easyui.min.js"></script>
 <script src="js/jquery-easyui/locale/easyui-lang-zh_CN.js"></script>
-<script src="js/attendanceStatiDeptComp.js"></script>
+<script src="js/attendanceStatsAll.js"></script>
 
 </body>
 </html>
