基本完成，请假单的一小小部分未完成

--- a/src/main/webapp/attendanToday.html
+++ b/src/main/webapp/attendanToday.html
@@ -32,7 +32,7 @@
                     <option value="1">上午</option>
                     <option value="2">下午</option>
                 </select>
-                <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="obj.find()">查询</a>
+                <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="find()">查询</a>
             </p>
         </div>
 
