--- a/src/main/webapp/attendanceStatsToday.html
+++ b/src/main/webapp/attendanceStatsToday.html
@@ -24,7 +24,7 @@
                     <option value="1">上午</option>
                     <option value="2">下午</option>
                 </select>
-                <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="obj.find()">生成公告</a>
+                <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-print'" onclick="generate()">生成公告</a>
             </p>
         </div>
 
