--- a/src/main/webapp/attendanceStatsDept.html
+++ b/src/main/webapp/attendanceStatsDept.html
@@ -14,50 +14,44 @@
 <!--页面：管理界面-->
 <div class="easyui-layout" data-options="fit:true" id="useBox">
     <div data-options="region:'center',split:true">
-        <!--查询-->
-        <form id="addOneForm" method="post">
-                <div class="tableFind" style="text-align: center;width: 100%">
+        <div class="tableFind" style="text-align: left;width: 100%">
 
-                    <p>
-                        <input type="radio" name="searchStatsDept" checked/>
-                        汇总按年月：
-                        <select class="easyui-combobox"style="width:160px;height:30px;" id="selectY">
-                            <option value="">请选择</option>
-                        </select>年
-                        <select class="easyui-combobox"style="width:160px;height:30px;" id="selectM">
-                            <option value="">请选择</option>
-                        </select>月
-                    </p>
-                    <p>
-                        <input type="radio" name="searchStatsDept" />
-                        汇总按时间段：
-                        <input type="text" id="d1" class="easyui-datebox"style="width: 16%;height:26px;"/>
-                        到
-                        <input type="text" id="d2" class="easyui-datebox"style="width: 16%;height:26px;"/>
-                    </p>
-                    <p>
-                        <input type="radio" name="searchStatsDept" />
-                        部门：
-                        <select class="easyui-combobox"style="width:160px;height:30px;">
-                            <option value="">请选择</option>
-                            <option value="1">技术部</option>
-                            <option value="2">吃饭不</option>
-                            <option value="3">花钱不</option>
-                        </select>
-                        -
-                        <select class="easyui-combobox"style="width:160px;height:30px;">
-                            <option value="">请选择</option>
-                            <option value="1">技术部</option>
-                            <option value="2">吃饭不</option>
-                            <option value="3">花钱不</option>
-                        </select>
-                </p>
-                        <div class="forSubmint">
-                            <a href="#" class="easyui-linkbutton"  iconCls="icon-save" >检索</a>
-                            <a href="#" class="easyui-linkbutton"  iconCls="icon-save" >导出Excel</a>
-                        </div>
-                </div>
-            </form>
+            <p>
+                <input type="radio" name="searchStatsDept" checked/>
+                <label style="width: 100px">汇总按年月：</label>
+                <select class="easyui-combobox"style="width:160px;height:30px;" id="selectY">
+                    <option value="">请选择</option>
+                </select>年
+                <select class="easyui-combobox"style="width:160px;height:30px;" id="selectM">
+                    <option value="">请选择</option>
+                </select>月
+            </p>
+            <p>
+                <input type="radio" name="searchStatsDept" />
+                <label style="width: 100px">汇总按时间段：</label>
+                <input type="text" id="d1" class="easyui-datebox"style="width: 16%;height:26px;"/>
+                到
+                <input type="text" id="d2" class="easyui-datebox"style="width: 16%;height:26px;"/>
+            </p>
+            <p>
+                <input type="radio" name="searchStatsDept" />
+                <label style="width: 100px">部门：</label>
+                <select class="easyui-combobox"style="width:160px;height:30px;">
+                    <option value="">请选择</option>
+                    <option value="1">技术部</option>
+                    <option value="2">吃饭不</option>
+                    <option value="3">花钱不</option>
+                </select>
+                -
+                <select class="easyui-combobox"style="width:160px;height:30px;">
+                    <option value="">请选择</option>
+                    <option value="1">技术部</option>
+                    <option value="2">吃饭不</option>
+                    <option value="3">花钱不</option>
+                </select>
+            <a id="btnFind" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="find()">检索</a>
+            <a id="btnExport" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-print'"  onclick="find()">导出Excel</a>
+        </div>
         <!--表格列表-->
         <div class="tableCon">
             <table id="table" class="tableStyle"></table>
