--- a/src/main/webapp/attendanToday.html
+++ b/src/main/webapp/attendanToday.html
@@ -25,7 +25,7 @@
         <!--表格查询-->
         <div class="tableFind">
             <p>
-                <label>部门：</label><input type="text" id="deptSelect" value="请选择"/>
+                <label>部门：</label><input type="text" id="deptSelect" value="全部"/>
                 <label>出勤日期：</label><input type="text" id="dd" class="easyui-datebox"style="width: 16%;height:26px;"/>
                 <label>出勤时段：</label>
                 <select class="easyui-combobox"style="width:160px;height:30px;">
