--- a/src/main/webapp/attendanceStatsAll.html
+++ b/src/main/webapp/attendanceStatsAll.html
@@ -50,7 +50,7 @@
             <p>
                 <input type="radio">
                 <label style="width: 100px">部门：</label>
-                <input type="text" id="deptSelect" value="请选择"/>
+                <input type="text" id="deptSelect" value="全部"/>
 
                 <label style="width: 100px">用户名：</label>
                 <input type="text" id="empSearch"/>
