--- a/src/main/webapp/attendanceStatsDept.html
+++ b/src/main/webapp/attendanceStatsDept.html
@@ -20,10 +20,8 @@
                 <input type="radio" name="searchStatsDept" checked/>
                 <label style="width: 100px">汇总按年月：</label>
                 <select class="easyui-combobox"style="width:160px;height:30px;" id="selectY">
-                    <option value="">请选择</option>
                 </select>年
                 <select class="easyui-combobox"style="width:160px;height:30px;" id="selectM">
-                    <option value="">请选择</option>
                 </select>月
             </p>
             <p>
@@ -37,14 +35,14 @@
                 <input type="radio" name="searchStatsDept" />
                 <label style="width: 100px">部门：</label>
                 <select class="easyui-combobox"style="width:160px;height:30px;">
-                    <option value="">请选择</option>
+                    <option value="">全部</option>
                     <option value="1">技术部</option>
                     <option value="2">吃饭不</option>
                     <option value="3">花钱不</option>
                 </select>
                 -
                 <select class="easyui-combobox"style="width:160px;height:30px;">
-                    <option value="">请选择</option>
+                    <option value="">全部</option>
                     <option value="1">技术部</option>
                     <option value="2">吃饭不</option>
                     <option value="3">花钱不</option>
