--- a/src/main/webapp/employeeList.html
+++ b/src/main/webapp/employeeList.html
@@ -18,7 +18,7 @@
         <div class="tableFind">
             <p>
                 <label>姓名：</label><input type="text" id="empSearch"/>
-                <label>部门：</label><input type="text" id="deptSelect" value="请选择"/>
+                <label>部门：</label><input type="text" id="deptSelect" value="全部"/>
                 <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="find()">查询</a>
             </p>
         </div>
