--- a/src/main/webapp/notesList.html
+++ b/src/main/webapp/notesList.html
@@ -20,7 +20,7 @@
                     <p>
                         <label style="width: 100px">请假类型：</label>
                         <select class="easyui-combobox"style="width:160px;height:30px;">
-                            <option value="">请选择</option>
+                            <option value="">全部</option>
                             <option value="1">事假</option>
                             <option value="2">病假</option>
                             <option value="3">婚假</option>
@@ -28,7 +28,7 @@
                             <option value="5">产假</option>
                         </select>
                         <label style="width: 100px">选择部门：</label>
-                        <input type="text" id="deptSelect" value="请选择"/>
+                        <input type="text" id="deptSelect" value="全部"/>
                     </p>
                     <p>
                         <label style="width: 100px">选择员工：</label><input type="text" id="empSearch"/>
@@ -131,7 +131,7 @@
                         <td colspan="4"><textarea class="TailArea" name="presidentSign"></textarea></td>
                     </tr>
                 </table>
-                <div class="forSubmint">
+                <div class="forSubmint" id="forsubmit">
                     <a href="#" class="easyui-linkbutton"  iconCls="icon-save" >确定</a>
                     <a href="#" class="easyui-linkbutton"  iconCls="icon-redo" >重置</a>
                 </div>
