增加了树形下拉框的对象转json方法

--- a/src/main/webapp/noteList.html
+++ b/src/main/webapp/noteList.html
@@ -219,10 +219,10 @@
                     </tr>
                 </table>
                 <div class="forSubmint" >
-                    <a href="#" class="easyui-linkbutton"
-                       iconCls="icon-ok" onclick="submitOne('add')" >提交</a>
-                    <a href="#" class="easyui-linkbutton"
-                       iconCls="icon-redo">重置</a>
+                    <a href="javascript:void(0)" class="easyui-linkbutton"
+                       iconCls="icon-ok" onclick="submitAdd()" >提交</a>
+                    <a href="javascript:void(0)" class="easyui-linkbutton"
+                       iconCls="icon-redo" onclick="clearAdd()">重置</a>
                 </div>
             </div>
         </div>
@@ -313,10 +313,10 @@
                     </tr>
                 </table>
                 <div class="forSubmint" id="forSubmint">
-                    <a href="#" class="easyui-linkbutton"
-                       iconCls="icon-ok" onclick="submitOne('edit')" >提交</a>
-                    <a href="#" class="easyui-linkbutton"
-                       iconCls="icon-redo">重置</a>
+                    <a href="javascript:void(0)" class="easyui-linkbutton"
+                       iconCls="icon-ok" onclick="submitEdit()" >提交</a>
+                    <a href="javascript:void(0)" class="easyui-linkbutton"
+                       iconCls="icon-redo" onclick="clearEdit()">重置</a>
                 </div>
             </div>
         </div>
