--- a/src/main/webapp/noteList.html
+++ b/src/main/webapp/noteList.html
@@ -15,25 +15,29 @@
 <div class="easyui-layout" data-options="fit:true" id="useBox">
     <div data-options="region:'center',split:true">
         <!--查询-->
-        <form id="addOneForm" method="post">
+        <form id="findSomeForm" method="post">
             <div class="tableFind" style="text-align: left;width: 100%">
                 <p>
                     <label style="width: 100px">请假类型：</label>
-                    <select class="easyui-combobox"style="width:160px;height:30px;">
-                        <option value="">全部</option>
-                        <option value="1">事假</option>
-                        <option value="2">病假</option>
-                        <option value="3">婚假</option>
-                        <option value="4">丧假</option>
-                        <option value="5">产假</option>
+                    <select class="easyui-combobox"style="width:160px;height:30px;" name="noteTypeSearch" id="noteTypeSearch">
+                        <option value="0">全部</option>
+                        <option value="9">事假</option>
+                        <option value="10">病假</option>
+                        <option value="11">婚假</option>
+                        <option value="12">丧假</option>
+                        <option value="13">产假</option>
                     </select>
                     <label style="width: 100px">选择部门：</label>
-                    <input type="text" id="deptSelect" value="全部"/>
+                    <input type="text" id="deptSelect" name="deptSelect" value="全部"/>
                 </p>
                 <p>
-                    <label style="width: 100px">选择员工：</label><input type="text" id="empSearch"/>
-                    <label style="width: 150px">开始截至中包含的日期：</label><input type="text" id="dateSearch" class="easyui-datebox"style="width: 16%;height:26px;"/>
-                    <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="find()">查询</a>
+                    <label style="width: 100px">选择员工：</label>
+                    <input type="text" id="empSearch" name="empSearch"/>
+
+                    <label style="width: 150px">开始截至中包含的日期：</label>
+                    <input type="text" id="dateSearch" name="dateSearch" class="easyui-datebox"style="width: 16%;height:26px;"/>
+                    <a id="btn" href="javascript:void(0)" class="easyui-linkbutton tableFindBut"
+                       data-options="iconCls:'icon-search'" onclick="findSomeNotes()">查询</a>
             </div>
         </form>
         <!--表格列表-->
